# Opencv_experiments

./: pyproject.toml
indoor/: detect_faces.py
outdoor/: auto_classify_images.py  classify_vehicles.py  labels.txt  manual_classify_images.py  traffic_test.py  train_classifier.py
