[tool.poetry]
name = "opencv-traffic"
version = "0.1.0"
description = ""
authors = ["AneeshNi47 <me@aneeshbharath.com>"]
readme = "README.md"
packages = [{include = "opencv_traffic"}]

[tool.poetry.dependencies]
python = "^3.11"
synapseml-opencv = "^100.0.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
